--- a/其他/设计模式.md
+++ b/其他/设计模式.md
@@ -340,3 +340,303 @@ enum Singleton{
 }
 ```
 
+
+
+
+
+## 四、工厂模式
+
+### 零、介绍
+
+1.  意义：将实例化对象的代码提取出来，放到一个类中统一管理和维护，达到和主项目的依赖关系的解耦。
+2.  三种工厂模式：简单工厂模式、工厂方法模式、抽象工厂模式
+3.  设计模式的依赖抽象原则：
+   * 创建对象实例时，不要直接new类，而是把这个new类的动作放在一个工厂的方法中，并返回。（变量不要直接持有具体类的引用）
+   * 不用让类继承具体类，而是继承抽象类或是实现接口。
+   * 不用覆盖基类中已经实现的方法。
+
+
+
+### 一、简单工厂模式
+
+简单工厂模式是一种**创建型设计模式**，它提供了一个统一的接口用于创建对象，而实际实例化哪一个类的工作则由这个工厂类决定。在简单工厂中，客户端不需要知道如何创建一个具体的对象，而是直接调用工厂提供的**静态方法**来获取所需的对象。
+
+**（1）简单工厂模式的角色和结构：**
+
+1. **工厂类（Factory）**：
+   - 这个类负责生产具体的产品对象。
+   - 通常包含一个静态方法，根据传入的参数（如类型标识符或配置信息）判断应该创建哪个具体产品的实例。
+   - 它隐藏了产品类的具体实现细节，并负责管理对象的创建过程。
+
+2. **抽象产品类（Abstract Product）**：
+   - 定义所有具体产品需要实现的公共接口或者抽象方法，这些方法是客户使用产品的入口点。
+
+3. **具体产品类（Concrete Product）**：
+   - 实现了抽象产品类所定义的接口，每个具体产品都对应一种特定的产品对象。
+
+**（2）简单工厂模式的流程：**
+- 客户端请求一个产品对象时，不直接实例化具体产品类，而是通过调用工厂类的静态方法传递相应的参数。
+- 工厂类根据参数值决定应该实例化哪个具体产品类，并返回该产品的实例给客户端。
+- 客户端拿到的是抽象产品类型的引用，这样可以针对抽象类型编程，符合“依赖倒置原则”和“开闭原则”。
+
+**（3）优缺点：**
+- **优点**：
+    - 将对象的创建与使用分离，简化了客户端代码，无需了解产品的具体实现。
+    - 避免了客户端直接接触具体产品类，方便修改和扩展产品结构。
+- **缺点**：
+    - 当新增产品类型时，可能需要修改工厂类的逻辑，违反了“开闭原则”，即对扩展开放、对修改关闭的原则。
+    - 如果产品族过于庞大，工厂类可能会变得复杂且难以维护。
+
+简单工厂模式虽然被称为“工厂模式”，但严格来说，它并不属于GOF（四人帮）所提出的23种经典设计模式之一。后续的工厂方法模式和抽象工厂模式则是更符合“开闭原则”的工厂模式实现方式。
+
+
+
+### 二、工厂方法模式
+
+工厂方法模式（Factory Method Pattern）是一种创建型设计模式，它在面向对象编程中用于将对象的创建过程封装在对应的工厂类中，并且通过定义一个接口来让子类决定实例化哪一个类。该模式的主要目的是为了将对象的创建与使用分离，并且使得系统更容易扩展新的产品类型。
+
+**结构与角色：**
+
+1. **抽象工厂（Abstract Factory）**：
+   - 定义了一个创建产品对象的公共接口，声明一个创建产品的工厂方法（factory method），通常是抽象方法。
+
+2. **具体工厂（Concrete Factory）**：
+   - 是抽象工厂的一个实现，每个具体工厂对应一种产品类型，负责生产相应的产品对象。
+   - 具体工厂实现了抽象工厂中定义的工厂方法，返回的是具体产品类型的实例。
+
+3. **抽象产品（Abstract Product）**：
+   - 定义了所有具体产品共有的接口或者抽象类，是工厂方法所返回的对象类型。
+
+4. **具体产品（Concrete Product）**：
+   - 实现了抽象产品接口的具体类，代表了某种特定的产品对象。
+
+**工作流程：**
+- 客户端请求创建一个产品对象时，不是直接创建产品对象，而是通过调用具体工厂的工厂方法。
+- 具体工厂根据客户端的需求选择并创建适当的具体产品对象。
+- 客户端只依赖于抽象产品，无需了解实际创建和返回的产品对象的具体类型，这样增加了系统的灵活性和可扩展性。
+
+**优点：**
+- 符合开闭原则，即对扩展开放，对修改关闭。增加新产品时，只需要新增一个具体产品类和相应的具体工厂即可，无需修改已有代码。
+- 把对象的创建过程集中管理，降低了模块间的耦合度，提高了代码的可复用性和可维护性。
+
+**缺点：**
+- 如果产品种类过多，会导致类的数目剧增，进而增加系统的复杂性。
+- 工厂方法通常需要与if-else或switch-case等逻辑判断配合使用，以决定创建哪种具体产品，这可能导致工厂类变得庞大而难以维护。
+
+例如，在Java中，假设有一个`PizzaStore`抽象工厂，它有一个工厂方法`createPizza(String type)`，不同的具体工厂如`ChicagoPizzaStore`和`NYPizzaStore`会根据传入的披萨类型字符串来创建不同口味的`Pizza`对象。
+
+
+
+
+
+### 三、抽象工厂模式
+
+抽象工厂模式（Abstract Factory Pattern）是一种创建型设计模式，它提供了一种方式来封装一组相关或相互依赖对象的创建过程，而不暴露具体的实现细节。这种模式的核心是为了解决一个系统中可能存在的多个产品族（即相关的产品系列）的问题，允许客户端在不指定具体产品类的情况下创建并使用这些产品的家族。
+
+**结构与角色：**
+
+1. **抽象工厂（Abstract Factory）**：
+   - 定义了创建产品家族的一组接口，每个接口用于创建一种特定类型的产品。
+   - 抽象工厂通常包含一系列创建方法，对应于不同产品族中的各个产品系列。
+
+2. **具体工厂（Concrete Factory）**：
+   - 实现了抽象工厂接口，负责生产某个产品家族的具体产品实例。
+   - 每个具体工厂对应一个特定的产品族，根据需要创建该产品族内的不同产品。
+
+3. **抽象产品（Abstract Product）**：
+   - 定义了产品家族中每类产品所共有的接口或者抽象类。
+   - 例如，如果有一个汽车产品族，抽象产品可能是“引擎”和“轮胎”，它们都有各自的抽象接口。
+
+4. **具体产品（Concrete Product）**：
+   - 是抽象产品的实现类，代表了实际可以使用的、具有特定属性的产品对象。
+   - 在上述汽车产品族的例子中，具体产品可以是“涡轮增压引擎”、“电动汽车引擎”、“夏季高性能轮胎”等。
+
+**工作流程：**
+- 客户端请求创建一个产品家族时，不是直接创建产品对象，而是通过调用具体工厂的方法获取这个家族下的产品。
+- 具体工厂根据请求生成相应产品家族中的具体产品实例，并将它们组合在一起。
+- 客户端通过抽象产品接口与产品交互，无需知道实际的产品实现细节。
+
+**优点：**
+- 隔离了高层模块与底层实现之间的耦合度，使得更换整个产品族变得容易，只需要改变具体工厂即可。
+- 支持产品族的扩展，增加新的产品族时只需新增相应的具体工厂和具体产品，原有代码不受影响。
+- 保证了各产品对象间的兼容性，因为它们都是由同一个工厂创建的，符合一致的设计原则。
+
+**缺点：**
+- 当产品族中的产品数量增加时，会增加系统的复杂性和维护成本。
+- 如果新添加的产品和现有产品不遵循原有的产品族划分规则，抽象工厂就难以适应这样的变化。
+
+在Java或其他面向对象编程语言中，抽象工厂模式常被应用于图形用户界面库（GUI库），如按钮、文本框等组件的创建；数据库驱动程序，以支持多种数据库类型的连接；或者是不同风格的外观主题切换等场景。
+
+
+
+
+
+## 五、原型模式
+
+### 零、介绍
+
+设计模式中的原型模式是一种创建型设计模式，它提供了一种通过复制现有对象（即原型）来创建新对象的方法。在原型模式中，一个对象可以创建其自身的一个副本而不依赖于特定的类构造器函数或者使用new操作符等传统的创建方式。这种模式适用于当直接实例化对象耗时或复杂，尤其是需要多次创建相似或相同状态的对象时。
+
+原型模式的核心角色包括：
+
+1. **抽象原型（Prototype）接口**：定义了克隆自身的操作，通常是一个`clone()`方法。所有具体原型类都必须实现这个接口。
+
+2. **具体原型（Concrete Prototype）类**：实现了抽象原型接口的类，包含将自身深度或浅度拷贝的具体实现。这意味着当调用`clone()`方法时，会创建并返回当前对象的一个复制品。
+
+使用原型模式的优点有：
+- 提高性能：通过复用已有的对象结构来减少创建对象的时间和内存开销。
+- 简化对象创建过程：客户端不需要知道如何创建复杂对象的内部结构，只需从原型中获取一个拷贝即可。
+- 支持动态创建具有相同或部分相同状态的对象。
+
+需要注意的是，在Java等语言中，实现原型模式时通常需要用到对象拷贝技术。拷贝分为两种类型：
+- 浅拷贝（Shallow Copy）：只复制对象本身以及其中值类型的成员变量，对于引用类型成员，仅复制引用，不复制引用指向的对象内容。
+- 深拷贝（Deep Copy）：不仅复制对象本身，还递归地复制所有引用类型成员所指向的对象，从而保证原对象与克隆对象之间的独立性。
+
+
+
+### 一、克隆羊
+
+```java
+//需要实现Cloneable接口
+public class Sheep implements Cloneable{
+    private int age;
+    private String name;
+    private String color = "白色";
+
+    public Sheep(int age, String name) {
+        this.age = age;
+        this.name = name;
+    }
+
+    @Override
+    public String toString() {
+        return "Sheep{" +
+                "age=" + age +
+                ", name='" + name + '\'' +
+                ", color='" + color + '\'' +
+                '}';
+    }
+
+    public int getAge() {
+        return age;
+    }
+
+    public void setAge(int age) {
+        this.age = age;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    @Override
+    protected Object clone(){
+
+        Sheep sheep = null;
+        try{
+            sheep = (Sheep)super.clone();
+        }catch (Exception e){
+            System.out.println(e.getMessage());
+        }
+
+        return sheep;
+    }
+}
+```
+
+```java
+public class CloneSheep {
+
+    public static void main(String[] args) throws CloneNotSupportedException {
+        Sheep sheep = new Sheep(18, "肖恩");
+        Sheep sheep1 = (Sheep) sheep.clone();
+        Sheep sheep2 = (Sheep) sheep.clone();
+        Sheep sheep3 = (Sheep) sheep.clone();
+        Sheep sheep4 = (Sheep) sheep.clone();
+        Sheep sheep5 = (Sheep) sheep.clone();
+
+        System.out.println(sheep1);
+        System.out.println(sheep2);
+        System.out.println(sheep3);
+        System.out.println(sheep4);
+        System.out.println(sheep5);
+    }
+
+}
+```
+
+
+
+### 二、深拷贝
+
+```java
+public class DeepCloneableTarget implements Serializable,Cloneable {
+
+    @Override
+    protected Object clone() throws CloneNotSupportedException {
+        return super.clone();
+    }
+}
+```
+
+
+
+```java
+public class DeepProtoType implements Serializable, Cloneable {
+
+    public String name;
+    public DeepCloneableTarget deepCloneableTarget;
+    public DeepProtoType(){
+        super();
+    }
+
+    /**
+     * 方式一
+     */
+    @Override
+    protected Object clone() throws CloneNotSupportedException {
+        //完成对基本数据的克隆
+        DeepProtoType deepProtoType = (DeepProtoType) super.clone();
+        //单独处理引用类型属性
+        deepProtoType.deepCloneableTarget = (DeepCloneableTarget) deepCloneableTarget.clone();
+
+        return deepProtoType;
+    }
+
+    /**
+     * 方式2
+     */
+    public Object deepClone(){
+        //创建流对象
+        ByteArrayOutputStream bos = null;
+        ObjectOutputStream oos = null;
+        ByteArrayInputStream bis = null;
+        ObjectInputStream ois = null;
+
+        try{
+            //序列化
+            bos = new ByteArrayOutputStream();
+            oos = new ObjectOutputStream(bos);
+            oos.writeObject(this);
+
+            //反序列化
+            bis = new ByteArrayInputStream(bos.toByteArray());
+            ois = new ObjectInputStream(bis);
+            DeepProtoType deepProtoType = (DeepProtoType) ois.readObject();
+
+            return deepProtoType;
+        }catch (Exception e){
+            System.out.println(e.getMessage());
+            return null;
+        }
+
+    }
+}
+```
+
+
+
