--- a/数据结构题目/回溯算法.md
+++ b/数据结构题目/回溯算法.md
@@ -1426,6 +1426,54 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+
+    List<List<Integer>> result = new ArrayList<>();
+    LinkedList<Integer> path = new LinkedList<>();
+    boolean[] used;
+
+    public List<List<Integer>> permuteUnique(int[] nums) {
+        Arrays.sort(nums);
+        used = new boolean[nums.length];
+        backtracking(nums);
+
+        return result;
+    }
+
+    public void backtracking(int[] nums){
+        if(path.size() == nums.length){
+            result.add(new ArrayList<>(path));
+            return;
+        }
+
+        for(int i = 0; i < nums.length; i++){
+            //重点在这个判断条件，如果和前一个一样且前一个还没用到，
+            //说明是在同一层，同一层不能选一样的
+            if(i > 0 && nums[i] == nums[i-1] && used[i-1] == false){
+                continue;
+            }
+
+            if(used[i] == false){
+                used[i] = true;
+                path.add(nums[i]);
+                backtracking(nums);
+                path.removeLast();
+                used[i] = false;
+            }
+
+        }
+    }
+
+}
+```
+
+
+
+
+
 ## 十四、重新安排行程
 
 ### 题目
