--- a/其他/设计模式.md
+++ b/其他/设计模式.md
@@ -640,3 +640,525 @@ public class DeepProtoType implements Serializable, Cloneable {
 
 
 
+## 六、建造者模式
+
+### 零、介绍
+
+设计模式中的**建造者模式（Builder Pattern）**是一种创建型设计模式，主要用于解决复杂对象的构建问题。它的核心目的是将一个复杂的对象的构造过程与它的表示（或结果）分离，使得同样的构建过程可以创建不同的表现形式的产品对象。
+
+在建造者模式中，通常包含以下几个关键角色：
+
+1. **抽象建造者（Builder）**：定义了创建产品的各个步骤的接口，并且一般会有一个方法来返回最终的产品。
+
+2. **具体建造者（Concrete Builder）**：实现了抽象建造者的接口，每个具体建造者都负责实现构建过程的一个具体版本，提供指定类型的复杂对象的构造细节。
+
+3. **产品（Product）**：是建造者需要创建的对象的接口或抽象类，它定义了产品的共性属性和方法。
+
+4. **导演者（Director）**（可选角色）：负责安排建造流程，调用具体建造者的相关方法来一步步构造产品，但不涉及具体的构造细节。
+
+通过使用建造者模式，我们可以有以下优点：
+- 封装性良好，客户端只需知道建造者的接口，而不必了解内部的具体构造逻辑。
+- 面向对象的设计原则之一——单一职责原则得到体现，每个建造者只负责创建对象的一部分。
+- 可以按照步骤逐步创建对象，能够很好地应对构造过程较为复杂的场景。
+- 便于控制构造过程，支持不同层次的产品配置和定制化。
+- 提高代码可读性和可维护性，因为复杂构造过程被分离开来。
+
+例如，在实际应用中，建造者模式可用于构建如XML文档、复杂的数据库查询、配置文件、汽车、电脑配置等具有多个部件组成，且这些部件有不同的组合方式以生成不同形态或配置的产品对象。
+
+
+
+### 一、代码
+
+####①抽象建造者（Builder）
+
+```java
+/**
+ * 抽象建造者Builder
+ */
+public abstract class HouseBuilder {
+
+    protected House house = new House();
+
+    //抽象方法
+    public abstract void buildBasic();
+    public abstract void buildWalls();
+    public abstract void roofed();
+
+    public House buildHouse() {
+        return house;
+    }
+}
+```
+
+
+
+#### ②具体建造者
+
+```java
+/**
+ * 具体建造者：Concrete Builder
+ */
+public class CommonHouse extends HouseBuilder{
+    @Override
+    public void buildBasic() {
+        System.out.println("CommonHouse 打地基");
+    }
+
+    @Override
+    public void buildWalls() {
+        System.out.println("CommonHouse 砌墙");
+    }
+
+    @Override
+    public void roofed() {
+        System.out.println("CommonHouse 封顶");
+    }
+}
+```
+
+
+
+#### ③产品
+
+```java
+/**
+ * 产品product
+ */
+public class House {
+
+    private String basic;
+    private String walls;
+    private String roof;
+
+    public String getBasic() {
+        return basic;
+    }
+
+    public void setBasic(String basic) {
+        this.basic = basic;
+    }
+
+    public String getWalls() {
+        return walls;
+    }
+
+    public void setWalls(String walls) {
+        this.walls = walls;
+    }
+
+    public String getRoof() {
+        return roof;
+    }
+
+    public void setRoof(String roof) {
+        this.roof = roof;
+    }
+}
+```
+
+
+
+#### ④导演者
+
+```java
+/**
+ * 导演者：Director
+ */
+public class HouseDirector {
+
+    //聚合
+    HouseBuilder houseBuilder;
+
+    //传入方法一：构造器
+    public HouseDirector(HouseBuilder houseBuilder){
+        this.houseBuilder = houseBuilder;
+    }
+
+    //传入方法二：setter方法
+    public void setHouseBuilder(HouseBuilder houseBuilder) {
+        this.houseBuilder = houseBuilder;
+    }
+
+    public House constructHouse(){
+        houseBuilder.buildBasic();
+        houseBuilder.buildWalls();
+        houseBuilder.roofed();
+
+        return houseBuilder.buildHouse();
+    }
+}
+```
+
+
+
+## 七、适配器模式
+
+### 零、介绍
+
+设计模式中的适配器模式（Adapter Pattern）是一种结构型设计模式，主要用于解决接口不兼容的问题，使原本因接口不同而不能直接协作的类能够协同工作。适配器模式的核心思想是将一个接口转换为另一个接口，以符合客户端的期望，这样即使目标接口和原接口不匹配，也能通过适配器进行间接交互。
+
+适配器模式的基本组成部分包括：
+
+1. **Target**（目标接口）：这是客户所期待的接口，定义了客户端需要的方法。
+2. **Adaptee**（被适配者）：这是已经存在的接口或类，拥有功能但接口不符合目标接口的需求。
+3. **Adapter**（适配器）：适配器类实现了目标接口，并在其内部持有对被适配者的引用，负责将目标接口的方法调用转化为对被适配者相应方法的调用。
+
+适配器模式有两种常见的实现方式：
+
+- **类适配器**：通过继承来实现适配，适配器类继承自`Adaptee`并实现`Target`接口，在适配器类中重写`Target`接口方法，调用`Adaptee`的原有方法。
+
+- **对象适配器**：通过组合来实现适配，适配器类包含一个`Adaptee`对象的引用，同时实现`Target`接口，并在实现的目标接口方法中委托给`Adaptee`对象的方法。 
+
+适配器模式的主要优点包括：
+- 允许在不修改原有代码的基础上复用已有类。
+- 提高系统的灵活性，可连接不同的类，减少耦合度。
+- 解决旧接口与新接口之间的兼容性问题。
+
+实际应用中，适配器模式常用于处理API的变化、第三方库接口的整合以及系统组件间的协同工作等场景。
+
+
+
+### 一、类适配器
+
+目标：220v电压 ----》5v电压
+
+```java
+/**
+ * 适配接口
+ */
+public interface IVoltage5V {
+
+    /**
+     * 输出5v电压
+     * @return
+     */
+    int output5V();
+
+}
+```
+
+
+
+```java
+/**
+ * 被适配者
+ */
+public class Voltage220V {
+
+    public int output220V(){
+        int src = 220;
+        System.out.println("输出电压：" + src + " V");
+        return src;
+    }
+
+}
+```
+
+
+
+```java
+/**
+ * 适配器
+ */
+public class VoltageAdapter extends Voltage220V implements IVoltage5V{
+    @Override
+    public int output5V() {
+        int src = output220V();
+
+        int des = src / 44; //转出5v输出
+
+        return des;
+    }
+}
+```
+
+
+
+### 二、对象适配器
+
+```java
+/**
+ * 适配器
+ */
+public class VoltageAdapter implements IVoltage5V {
+
+    //使用组合替代继承
+    private Voltage220V voltage220V;
+
+    public VoltageAdapter(Voltage220V voltage220V) {
+        this.voltage220V = voltage220V;
+    }
+
+    @Override
+    public int output5V() {
+        int src = voltage220V.output220V();
+
+        int des = src / 44; //转出5v输出
+
+        return des;
+    }
+}
+```
+
+
+
+### 三、接口适配器
+
+```java
+public interface MyInterface {
+
+    void m1();
+
+    void m2();
+
+    void m3();
+
+}
+```
+
+
+
+```java
+/**
+ * 抽象类实现接口，对接口方法进行空实现
+ */
+public abstract class AbsClass implements MyInterface{
+
+    //空实现
+    @Override
+    public void m1() {
+
+    }
+
+    @Override
+    public void m2() {
+
+    }
+
+    @Override
+    public void m3() {
+
+    }
+}
+```
+
+
+
+```java
+public class Client {
+
+    public static void main(String[] args) {
+        AbsClass absClass = new AbsClass(){
+            /**
+             * 重写需要使用到的方法即可
+             */
+            @Override
+            public void m1(){
+                System.out.println("使用了m1方法");
+            }
+        };
+
+        absClass.m1();
+    }
+
+}
+```
+
+
+
+## 八、桥接模式
+
+### 零、介绍
+
+设计模式中的**桥接模式（Bridge Pattern）**是一种**结构型**设计模式，它的主要目的是将抽象部分与其实现部分分离，使它们可以独立地变化。在传统的继承关系中，当抽象类的实现需要多种变化维度时，容易导致类的爆炸性增长（即多个维度下的组合会导致大量的子类）。桥接模式通过引入抽象层和实现层两个独立的层次结构，以“组合”而非“继承”的方式来解耦抽象接口与具体实现，使得这两者可以在运行时动态绑定。
+
+**模式的主要角色包括：**
+
+1. **Abstraction（抽象类）**：
+   定义了抽象接口，维护一个对Implementor对象的引用，并且它定义了一些操作，这些操作委托给Implementor完成。
+
+2. **Refined Abstraction（改进的抽象类或子类）**：
+   是Abstraction的一个扩展版本，它可以增加新的行为，同时仍然依赖Implementor进行实现细节。
+
+3. **Implementor（实现接口或抽象类）**：
+   定义了实现类需要实现的接口，它不依赖于Abstraction的具体实现，而是提供了具体的算法实现。
+
+4. **Concrete Implementor（具体实现类）**：
+   实现Implementor接口，提供不同类型的实现，而这些不同的实现可以在运行时被Abstraction对象灵活使用。
+
+**桥接模式的优点：**
+- 有效地解耦了抽象和实现，两者可以独立变化。
+- 支持多维度的变化，避免了因为类爆炸而导致的设计复杂性。
+- 提高了系统的可扩展性和灵活性，新增功能只需添加新类，不需要修改现有代码。
+
+**应用场景：**
+- 当系统需要在多个维度上进行变化时，例如GUI库中窗口组件和渲染引擎是两个独立变化的维度。
+- 需要将抽象部分和实现部分分离，以便分别进行独立开发和复用时。
+- 想要避免因大量具有特定功能的子类而导致类层次结构过于庞大和复杂的情况。
+
+
+
+### 一、代码
+
+![](https://raw.githubusercontent.com/vankykoo/image/main/cut/20240319165130.png)
+
+
+
+```java
+/**
+ * 抽象接口Implementor
+ */
+public interface Brand {
+
+    void open();
+
+    void close();
+
+    void call();
+
+}
+```
+
+```java
+/**
+ * 抽象类Abstraction
+ */
+public abstract class Phone {
+	//把接口聚合到抽象类中，抽象类可以调用接口的方法
+    private Brand brand;
+
+    public Phone(Brand brand) {
+        this.brand = brand;
+    }
+
+    protected void open(){
+        this.brand.open();
+    }
+
+    protected void close(){
+        this.brand.close();
+    }
+
+    protected void call(){
+        this.brand.call();
+    }
+}
+```
+
+```java
+/**
+ * 抽象类的子类1  Refined Abstraction
+ */
+public class UpRightPhone extends Phone {
+
+    public UpRightPhone(Brand brand) {
+        super(brand);
+    }
+
+    public void open() {
+        super.open();
+        System.out.println("直立手机");
+    }
+
+    public void close() {
+        super.close();
+        System.out.println("直立手机");
+    }
+
+    public void call() {
+        super.call();
+        System.out.println("直立手机");
+    }
+
+}
+
+/**
+ * 抽象类的子类2  Refined Abstraction
+ */
+public class FoldedPhone extends Phone{
+    public FoldedPhone(Brand brand) {
+        super(brand);
+    }
+
+    public void open(){
+        super.open();
+        System.out.println("折叠手机");
+    }
+
+    public void close(){
+        super.close();
+        System.out.println("折叠手机");
+    }
+
+    public void call(){
+        super.call();
+        System.out.println("折叠手机");
+    }
+}
+```
+
+```java
+/**
+ * 接口的实现类1   Concrete Implementor
+ */
+public class Vivo implements Brand{
+
+    @Override
+    public void open() {
+        System.out.println("Vivo 开机");
+    }
+
+    @Override
+    public void close() {
+        System.out.println("Vivo 关机");
+    }
+
+    @Override
+    public void call() {
+        System.out.println("Vivo 打电话");
+    }
+
+}
+
+/**
+ * 接口的实现类2   Concrete Implementor
+ */
+public class XiaoMi implements Brand{
+    @Override
+    public void open() {
+        System.out.println("XiaoMi 开机");
+    }
+
+    @Override
+    public void close() {
+        System.out.println("XiaoMi 关机");
+    }
+
+    @Override
+    public void call() {
+        System.out.println("XiaoMi 打电话");
+    }
+}
+```
+
+```java
+/**
+ * 使用
+ */
+public class Client {
+
+    public static void main(String[] args) {
+        FoldedPhone foldedPhone = new FoldedPhone(new Vivo());
+        foldedPhone.open();
+        foldedPhone.call();
+        foldedPhone.close();
+
+        UpRightPhone upRightPhone = new UpRightPhone(new XiaoMi());
+        upRightPhone.open();
+        upRightPhone.call();
+        upRightPhone.close();
+    }
+
+}
+```
+
