--- a/数据结构题目/回溯算法.md
+++ b/数据结构题目/回溯算法.md
@@ -1499,44 +1499,59 @@ class Solution {
 
 ```java
 class Solution {
-
+    // 定义结果集，用于存储满足条件的最终行程
     private LinkedList<String> res;
-    private LinkedList<String> path = new LinkedList<>();
+    
+    // 定义路径栈，记录当前搜索到的机场路径，初始化时添加起点JFK
+    private LinkedList<String> path = new LinkedList<>("JFK");
 
+    // 主要方法，输入参数为一个二维字符串列表tickets，表示所有的机票信息
     public List<String> findItinerary(List<List<String>> tickets) {
-      //对每张票的目的地进行排序
-        Collections.sort(tickets,(a, b) -> a.get(1).compareTo(b.get(1)));
-        path.add("JFK");
-      //“使用过”数组
+        // 对机票列表按照目的地机场进行排序，便于回溯过程中查找符合条件的下一个机场
+        Collections.sort(tickets, (a, b) -> a.get(1).compareTo(b.get(1)));
+
+        // 初始化一个布尔数组，用于标记每张机票是否已被使用
         boolean[] used = new boolean[tickets.size()];
-        backtracking((ArrayList)tickets, used);
+
+        // 调用回溯算法寻找满足条件的行程
+        backTracking((ArrayList) tickets, used);
+
+        // 返回找到的满足条件的行程集合
         return res;
     }
 
-    public boolean backtracking(ArrayList<List<String>> tickets, boolean[] used){
-        if(path.size() == tickets.size() + 1){
-            res = new LinkedList(path);
+    // 回溯算法实现，参数：机票列表tickets和已使用机票标记数组used
+    public boolean backTracking(ArrayList<List<String>> tickets, boolean[] used) {
+        // 当前路径大小等于机票数量加1时，说明找到了一条从JFK出发并遍历所有机场后返回JFK的完整行程
+        if (path.size() == tickets.size() + 1) {
+            // 将当前路径复制到结果集中
+            res = new LinkedList<>(path);
             return true;
         }
 
-        for(int i = 0; i < tickets.size(); i++){
-            if(!used[i] && tickets.get(i).get(0).equals(path.getLast())) {
-              //如果没使用过此票，而且出发地等于path最后的目的地
-              //把此票的目的地放入path
+        // 遍历所有机票，尝试找到下一个符合当前路径的机场
+        for (int i = 0; i < tickets.size(); i++) {
+            // 如果某条机票未被使用且其出发机场与当前路径最后一个机场相同，则进行以下操作
+            if (!used[i] && tickets.get(i).get(0).equals(path.getLast())) {
+                // 将该机票的目的地加入当前路径，并标记此机票已使用
                 path.add(tickets.get(i).get(1));
                 used[i] = true;
 
-                if(backtracking(tickets, used)){
+                // 递归调用backTracking继续查找剩余部分的行程
+                if (backTracking(tickets, used)) {
+                    // 若递归过程中找到了满足条件的行程，则直接返回true
                     return true;
                 }
 
+                // 回溯：恢复此机票未使用状态并将路径中最后一个机场移除
                 used[i] = false;
                 path.removeLast();
             }
         }
+        
+        // 若无法在当前状态下找到满足条件的下一个机场，则返回false
         return false;
     }
-    
 }
 ```
 
@@ -1644,6 +1659,83 @@ class Solution {
         }
 
         return usedArray;
+    }
+}
+```
+
+
+
+### 二刷
+
+```java
+class Solution {
+
+    List<List<String>> result = new ArrayList<>();
+    LinkedList<String> path = new LinkedList<>();
+    StringBuilder sb = new StringBuilder();
+
+    public List<List<String>> solveNQueens(int n) {
+        for (int i = 0; i < n; i++) {
+            sb.append(".");
+        }
+        backtracking(n, 0, new boolean[n][n]);
+
+        return result;
+    }
+
+    public void backtracking(int n, int floor, boolean[][] used) {
+        if (path.size() == n) {
+            result.add(new ArrayList<>(path));
+            return;
+        }
+
+        for (int i = 0; i < n; i++) {
+            if (!used[floor][i]) {
+                sb.setCharAt(i, 'Q');
+                path.add(sb.toString());
+                sb.setCharAt(i, '.');
+                backtracking(n, floor + 1, put(i, floor, n, used));
+                path.remove(path.size() - 1);
+            }
+        }
+    }
+
+    public boolean[][] put(int x, int y, int n, boolean[][] used) {
+        //主要是这里要创建一个新的数组，不然都直接传引用，直接共用一个了
+        boolean[][] used2 = new boolean[n][n];
+
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < n; j++) {
+                used2[i][j] = used[i][j];
+            }
+        }
+
+        //竖
+        for (int i = 0; i < n; i++) {
+            used2[i][x] = true;
+        }
+
+        //左上
+        for (int i = x,j = y; i >= 0 && j >= 0; i--,j--) {
+            used2[j][i] = true;
+        }
+
+        //左下
+        for (int i = x, j = y; i >= 0 && j < n; i--, j++) {
+            used2[j][i] = true;
+        }
+
+        //右上
+        for (int i = x, j = y; i < n && j >= 0; i++, j--) {
+            used2[j][i] = true;
+        }
+
+        //右下
+        for (int i = x,  j = y; i < n && j < n; i++,  j++) {
+            used2[j][i] = true;
+        }
+
+        return used2;
     }
 }
 ```
