--- a/其他/设计模式.md
+++ b/其他/设计模式.md
@@ -1162,3 +1162,1586 @@ public class Client {
 }
 ```
 
+
+
+## 九、装饰者模式
+
+### 零、介绍
+
+设计模式中的装饰者模式是一种结构型设计模式，它提供了一种在运行时动态地向对象添加新的职责（功能）的方法，而无需通过子类继承来扩展类的行为。装饰者模式的核心思想是通过组合而非继承的方式来增强或修改对象的行为。
+
+在装饰者模式中：
+
+1. **角色与结构**：
+   - 抽象组件(Component)：定义了一个接口，所有具体组件和装饰者都遵循这个接口，这样客户端就可以一致地使用它们。
+   - 具体组件(ConcreteComponent)：实现了抽象组件的接口，它是需要被装饰的对象。
+   - 装饰器(Decorator)：也实现了抽象组件接口，并包含一个指向抽象组件实例的引用。装饰器可以在其方法中调用被装饰对象的方法，并在此基础上添加额外的操作。
+   - 具体装饰器(ConcreteDecorator)：是装饰器的具体实现，它给具体组件增加了额外的功能。
+
+2. **工作原理**：
+   - 客户端创建一个具体组件实例。
+   - 当需要添加新功能时，不是直接修改或扩展具体组件，而是将具体组件对象传递给装饰器，由装饰器对其进行包裹。
+   - 通过一系列装饰器的嵌套，可以逐步为原始组件增加多个新功能，形成装饰链。
+   - 对于客户端而言，装饰后的对象看起来就像是原始组件的简单延伸，这是因为装饰器与组件共享相同的接口，因此对客户端透明。
+
+3. **应用场景**：
+   - 在不希望大量增加子类的情况下扩展对象功能。
+   - 动态、透明地给单个对象添加职责，例如在软件开发中常见的日志记录、性能监控、权限控制等附加行为。
+   - 当继承层次过深或者由于种种原因不适合使用继承时，如遇到final类不能被继承的情况。
+
+4. **优点**：
+   - 保持了开放封闭原则（Open-Closed Principle, OCP），即对扩展开放，对修改关闭。
+   - 更加灵活，可以通过组合不同的装饰器以不同的方式来装饰同一组件，从而达到各种定制效果。
+   - 避免了通过继承增加子类数量而导致的系统复杂性增加问题。
+
+5. **缺点**：
+   - 如果过度使用装饰器，可能会导致过多的小类，使得设计变得复杂且难以理解。
+   - 装饰器和组件必须具有共同的接口，这可能意味着接口会过于庞大，包含了实际不需要的方法。
+
+
+
+### 一、代码
+
+#### ①抽象组件Component
+
+```java
+public abstract class Drink {
+
+    private String des;
+    private float cost = 0.0f;
+
+    public String getDes() {
+        return des;
+    }
+
+    public void setDes(String des) {
+        this.des = des;
+    }
+
+    public float getCost() {
+        return cost;
+    }
+
+    public void setCost(float cost) {
+        this.cost = cost;
+    }
+
+    public abstract float cost();
+}
+```
+
+
+
+#### ②装饰器 Decorator
+
+```java
+/**
+ * Decorator
+ */
+public class Decorator extends Drink{
+
+    private Drink drink;
+
+    public Decorator(Drink drink) {
+        this.drink = drink;
+    }
+
+    @Override
+    public float cost() {
+        return super.getCost() + drink.cost();
+    }
+
+    @Override
+    public String getDes() {
+        return super.getDes() + " " + super.getCost() + " " + drink.getDes();
+    }
+}
+```
+
+
+
+#### ③具体组件 ConcreteComponent
+
+```java
+/**
+* 具体组件的一个抽象
+*/
+public class Coffee extends Drink{
+    @Override
+    public float cost() {
+        return super.getCost();
+    }
+}
+
+/**
+* 具体组件1
+*/
+public class Espresso extends Coffee{
+    public Espresso() {
+        setDes("意大利咖啡");
+        setCost(8.88f);
+    }
+}
+
+/**
+* 具体组件2
+*/
+public class LongBlack extends Coffee{
+    public LongBlack() {
+        setDes("黑咖啡");
+        setCost(9.99f);
+    }
+}
+
+/**
+* 具体组件3
+*/
+public class ShortBlack extends Coffee{
+    public ShortBlack() {
+        setDes("ShortBlack");
+        setCost(5.44f);
+    }
+}
+```
+
+
+
+#### ④具体装饰器 ConcreteDecorator
+
+```java
+/**
+* 具体装饰器1
+*/
+public class Chocolate extends Decorator{
+    public Chocolate(Drink drink) {
+        super(drink);
+        super.setDes(" 巧克力 ");
+        super.setCost(1.11f);
+    }
+}
+
+/**
+* 具体装饰器2
+*/
+public class Milk extends Decorator{
+    public Milk(Drink drink) {
+        super(drink);
+        super.setDes(" 牛奶 ");
+        super.setCost(1.23f);
+    }
+}
+
+/**
+* 具体装饰器3
+*/
+public class Soy extends Decorator{
+    public Soy(Drink drink) {
+        super(drink);
+        super.setDes(" 豆浆 ");
+        super.setCost(1.44f);
+    }
+}
+```
+
+
+
+#### ⑤使用
+
+```java
+public class Client {
+    public static void main(String[] args) {
+        //生成一杯咖啡
+        Drink shortBlack = new ShortBlack();
+        System.out.println(shortBlack.getDes());
+        System.out.println(shortBlack.cost());
+        //给咖啡进行装饰（加一个牛奶）
+        shortBlack = new Milk(shortBlack);
+        System.out.println(shortBlack.getDes());
+        System.out.println(shortBlack.cost());
+        //给咖啡进行装饰（加一个巧克力）
+        shortBlack = new Chocolate(shortBlack);
+        System.out.println(shortBlack.getDes());
+        System.out.println(shortBlack.cost());
+        //给咖啡进行装饰（加一个巧克力）
+        shortBlack = new Chocolate(shortBlack);
+        System.out.println(shortBlack.getDes());
+        System.out.println(shortBlack.cost());
+    }
+}
+```
+
+
+
+## 十、组合模式
+
+### 零、介绍
+
+设计模式中的组合模式（Composite Pattern）是一种结构型设计模式，它主要用于解决对象的树形结构问题，使得客户端可以一致地处理单个对象和对象组合。该模式的主要目的是将对象组织成树形结构，允许用户**以统一的方式处理单个对象以及对象集合**，即无论处理的是单独的对象还是整个组合，其操作方式都相同。
+
+在组合模式中，主要包含以下角色：
+
+1. **Component（抽象构件）**：
+   - 这是一个抽象类或接口，定义了所有组件共有的接口方法，这些方法包括叶子节点和容器节点都会用到的操作。
+   - 通过这个接口，客户端可以对单个对象和复合对象进行统一处理。
+
+2. **Leaf（叶子构件）**：
+   - 实现了`Component`接口的具体类，代表树形结构中的叶子节点，它们没有子节点。
+   - 叶子节点通常包含了具体的数据或业务逻辑。
+
+3. **Composite（复合构件）**：
+   - 同样实现`Component`接口，但它还具有管理一组`Component`实例的能力，也就是它可以包含多个子构件。
+   - 提供了用于添加、删除子构件的方法，并且可能重写了一些接口方法来实现递归行为，比如遍历并调用所有子构件的相关方法。
+
+组合模式的应用场景：
+- 文件系统中的目录与文件，一个目录可以包含其他子目录和文件，而文件是叶子节点。
+- HTML文档结构中的元素，如DOM节点，其中某些节点可以包含其他节点，形成嵌套结构。
+- 组织结构中的员工和部门，部门可以包含多个员工和其他部门。
+
+使用组合模式的优点：
+- 客户端可以一致地处理单个对象和对象组合，简化了代码。
+- 结构清晰，容易表示对象的部分-整体层次关系。
+- 更易于扩展新的容器或者叶子节点类型。
+
+缺点：
+- 如果层次结构过于复杂，可能会增加系统的理解难度。
+- 对于不需要这种层次结构的场景，使用组合模式会显得冗余。
+
+
+
+### 一、代码
+
+#### ① Component（抽象构件）
+
+```java
+public abstract class OrganizationComponent {
+
+    private String name;
+    private String des;
+
+    public OrganizationComponent(String name, String des) {
+        this.name = name;
+        this.des = des;
+    }
+
+    public void add(OrganizationComponent organizationComponent){
+        throw new UnsupportedOperationException();
+    }
+
+    public void remove(OrganizationComponent organizationComponent){
+        throw new UnsupportedOperationException();
+    }
+
+    public abstract void print();
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getDes() {
+        return des;
+    }
+
+    public void setDes(String des) {
+        this.des = des;
+    }
+}
+```
+
+
+
+#### ②Composite（复合构件）
+
+```java
+/**
+ * 复合构件1
+ */
+public class University extends OrganizationComponent{
+
+    private List<OrganizationComponent> organizationComponents = new ArrayList<>();
+
+    public University(String name, String des) {
+        super(name, des);
+    }
+
+    @Override
+    public void add(OrganizationComponent organizationComponent) {
+        organizationComponents.add(organizationComponent);
+    }
+
+    @Override
+    public void remove(OrganizationComponent organizationComponent) {
+        organizationComponents.remove(organizationComponent);
+    }
+
+    @Override
+    public String getName() {
+        return super.getName();
+    }
+
+    @Override
+    public String getDes() {
+        return super.getDes();
+    }
+
+    @Override
+    public void print() {
+        System.out.println("=================" + this.getName() + "=================");
+        for (OrganizationComponent organizationComponent : organizationComponents) {
+            organizationComponent.print();
+        }
+    }
+}
+
+/**
+ * 复合构件2
+ */
+public class College extends OrganizationComponent{
+
+    private List<OrganizationComponent> organizationComponents = new ArrayList<>();
+
+    public College(String name, String des) {
+        super(name, des);
+    }
+
+    @Override
+    public void add(OrganizationComponent organizationComponent) {
+        organizationComponents.add(organizationComponent);
+    }
+
+    @Override
+    public void remove(OrganizationComponent organizationComponent) {
+        organizationComponents.remove(organizationComponent);
+    }
+
+    @Override
+    public String getName() {
+        return super.getName();
+    }
+
+    @Override
+    public String getDes() {
+        return super.getDes();
+    }
+
+    @Override
+    public void print() {
+        System.out.println("=================" + this.getName() + "=================");
+        for (OrganizationComponent organizationComponent : organizationComponents) {
+            organizationComponent.print();
+        }
+    }
+
+}
+```
+
+
+
+#### ③ 叶子节点 leaf
+
+```java
+public class Department extends OrganizationComponent{
+
+    public Department(String name, String des) {
+        super(name, des);
+    }
+
+    @Override
+    public String getName() {
+        return super.getName();
+    }
+
+    @Override
+    public String getDes() {
+        return super.getDes();
+    }
+
+    @Override
+    public void print() {
+        System.out.println(this.getName());
+    }
+}
+```
+
+
+
+#### ④使用
+
+```java
+public class Client {
+
+    public static void main(String[] args) {
+
+        OrganizationComponent pu = new University("PekingUniversity","北大");
+
+        OrganizationComponent computerCollege = new College("计算机学院","计院");
+        OrganizationComponent infoEngineerCollege = new College("信息工程学院","信工");
+
+        pu.add(computerCollege);
+        pu.add(infoEngineerCollege);
+
+        //pu.print();
+
+        computerCollege.add(new Department("软件工程","软工"));
+        computerCollege.add(new Department("网络工程","网工"));
+        computerCollege.add(new Department("计算机科学与技术","计科"));
+
+        //pu.print();
+
+        infoEngineerCollege.add(new Department("信息工程","信工"));
+        infoEngineerCollege.add(new Department("通信工程","通信"));
+
+        pu.print();
+    }
+
+}
+
+
+//输出
+/**
+
+=================PekingUniversity=================
+=================计算机学院=================
+软件工程
+网络工程
+计算机科学与技术
+=================信息工程学院=================
+信息工程
+通信工程
+
+/*
+```
+
+
+
+## 十一、外观模式
+
+### 零、介绍
+
+设计模式中的外观模式（Facade Pattern）是一种结构型设计模式，其主要目的是为了简化复杂子系统接口的使用。在软件开发中，一个系统通常由多个相互协作的子系统组成，而这些子系统的内部实现往往较为复杂，包含许多类和方法。当客户端直接与这些子系统交互时，可能会面临复杂的调用关系和较高的耦合度。
+
+外观模式通过**提供一个统一的高级接口来封装子系统**的复杂性，这个接口即“外观”或“门面”，它定义了客户端可以访问的一组操作，**并负责与各个子系统进行交互，协调完成请求的工作**。这样，客户端只需与外观对象进行交互，而不必了解各个子系统的具体细节，从而降低了系统的耦合度，简化了客户端代码，也使得整个系统的接口更加简洁易用。
+
+以下是一些外观模式的关键特点：
+
+1. **简化接口**：外观角色为外部用户提供了一个更简单、更易于理解的接口。
+2. **封装复杂性**：隐藏了子系统组件之间的交互细节和复杂逻辑。
+3. **解耦**：减少了客户端与子系统之间的依赖关系，使得子系统的变化不会直接影响到客户端。
+4. **统一控制**：通过外观对象可以更容易地控制对子系统的访问权限和流程控制。
+
+在实际应用中，外观模式的一个典型场景是操作系统提供的图形用户界面（GUI），用户通过简单的点击操作就可以执行复杂的系统任务，而无需了解底层的操作系统服务是如何被调用和组合的。另一个例子是家电控制系统，用户通过一个总的遥控器（外观）就能控制多个电器设备，而不用单独控制每个设备的开关。
+
+
+
+### 一、代码
+
+#### ①门面接口
+
+```java
+/**
+* 复制复杂的调用
+*/
+public class HomeTheaterFacade {
+
+    private DVDPlayer dvdPlayer;
+    private Popcorn popcorn;
+    private Projector projector;
+    private Screen screen;
+
+    public HomeTheaterFacade() {
+        super();
+        dvdPlayer = DVDPlayer.getInstance();
+        popcorn = Popcorn.getInstance();
+        projector = Projector.getInstance();
+        screen = Screen.getInstance();
+    }
+
+    public void ready(){
+        dvdPlayer.on();
+        popcorn.pop();
+        projector.on();
+        screen.down();
+    }
+
+    public void start(){
+        dvdPlayer.play();
+        popcorn.pop();
+        projector.focus();
+    }
+
+    public void end(){
+        dvdPlayer.off();
+        popcorn.off();
+        screen.up();
+        projector.off();
+    }
+}
+```
+
+
+
+#### ②子系统集合
+
+```java
+/**
+* 子系统1
+*/
+public class DVDPlayer {
+
+    private static DVDPlayer instance = new DVDPlayer();
+
+    public static DVDPlayer getInstance(){
+        return instance;
+    }
+
+    public void on(){
+        System.out.println(" dvd on ");
+    }
+
+    public void off(){
+        System.out.println(" dvd off ");
+    }
+
+    public void play(){
+        System.out.println(" dvd play ");
+    }
+}
+
+/**
+* 子系统2
+*/
+public class Popcorn {
+
+    private static Popcorn instance = new Popcorn();
+
+    public static Popcorn getInstance(){
+        return instance;
+    }
+
+    public void on(){
+        System.out.println(" Popcorn on ");
+    }
+
+    public void off(){
+        System.out.println(" Popcorn off ");
+    }
+
+    public void pop(){
+        System.out.println(" Popcorn pop ");
+    }
+
+}
+
+/**
+* 子系统3
+*/
+public class Projector {
+
+    private static Projector instance = new Projector();
+
+    public static Projector getInstance(){
+        return instance;
+    }
+
+    public void on(){
+        System.out.println(" Projector on ");
+    }
+
+    public void off(){
+        System.out.println(" Projector off ");
+    }
+
+    public void focus(){
+        System.out.println(" Projector focus ");
+    }
+
+}
+
+
+/**
+* 子系统4
+*/
+public class Screen {
+
+    private static Screen instance = new Screen();
+
+    public static Screen getInstance(){
+        return instance;
+    }
+
+    public void up(){
+        System.out.println(" Screen up ");
+    }
+
+    public void down(){
+        System.out.println(" Screen down ");
+    }
+}
+```
+
+### ③客户端调用
+
+```java
+public class Client {
+
+    public static void main(String[] args) {
+        HomeTheaterFacade homeTheaterFacade = new HomeTheaterFacade();
+        System.out.println("准备阶段：");
+        homeTheaterFacade.ready();
+        System.out.println("开始看电影");
+        homeTheaterFacade.start();
+        System.out.println("看完了。。。");
+        homeTheaterFacade.end();
+    }
+
+}
+```
+
+
+
+## 十二、享元模式
+
+### 零、介绍
+
+设计模式中的享元模式（Flyweight Pattern）是一种用于性能优化的结构型设计模式，它通过共享已经创建的对象来有效地支持大量细粒度对象的复用。该模式的主要目的是在系统中减少内存占用和提高运行效率，特别是在处理大量的相似或相同对象时。
+
+**基本概念与目的：**
+- 享元模式的核心是“共享”，即多个对象可以共享一个相同的实例，以减少新对象的创建。
+- 这种模式适用于那些大部分状态可共享、而只有少部分状态因环境变化而不同的情况。
+- 通过区分内部状态（Intrinsic State）和外部状态（Extrinsic State），内部状态是可以被共享的部分，而外部状态是依赖于具体场景且不能被共享的。
+
+**角色组成：**
+1. **抽象享元（Flyweight）角色**：定义了所有具体享元类需要实现的公共接口，包括内部状态的操作方法以及可能存在的外部状态设置方法。
+
+2. **具体享元（Concrete Flyweight）角色**：实现了抽象享元角色所声明的接口，并存储了内部状态。具体享元可以共享。
+
+3. **享元工厂（Flyweight Factory）角色**：负责创建并管理享元对象池，当请求一个新的享元对象时，如果池中有符合条件的已存在对象，则返回这个已存在的对象；否则创建一个新的具体享元对象并加入到池中。
+
+**应用场景举例：**
+- 文字渲染引擎中，字符的各种字体样式和大小作为内部状态，而字符在页面上的位置、颜色等信息作为外部状态。同一个字符的不同样式只需要创建一次，然后在不同位置重用。
+- 在游戏开发中，多种类型的精灵（Sprite）图片可以共享其纹理数据，而各自的坐标、旋转角度等则是外部状态。
+- 数据库连接池就是一个典型的享元模式应用，其中每个数据库连接就是享元对象，连接参数等不变的信息为内部状态，而每次实际执行SQL语句时的上下文则为外部状态。
+
+**优缺点：**
+- **优点**：
+    - 减少系统内存开销，提高内存利用率。
+    - 由于减少了对象的数量，因此提高了系统的整体性能。
+- **缺点**：
+    - 使用享元模式会使得程序复杂性增加，因为需要分离内部状态和外部状态，并引入额外的工厂类进行对象管理和状态控制。
+    - 对于一些无法有效共享或者状态难以划分的问题，不适合使用享元模式。
+
+总结来说，享元模式通过共享技术巧妙地解决了大量相似对象对系统资源造成的压力，是软件设计中的一种重要优化手段。
+
+
+
+### 一、代码
+
+#### ①抽象享元角色
+
+```java
+/**
+ * 抽象享元
+ */
+public abstract class WebSite {
+
+    public abstract void use();
+
+}
+```
+
+#### ②具体享元角色
+
+```java
+/**
+ * 具体享元
+ */
+public class ConcreteWebSite extends WebSite{
+
+    private String type = "";
+
+    public ConcreteWebSite(String type) {
+        this.type = type;
+    }
+
+    @Override
+    public void use() {
+        System.out.println(" website type : " + type + " ===>" + this.hashCode());
+    }
+}
+```
+
+#### ③享元工厂角色
+
+```java
+/**
+ * 享元工厂
+ */
+public class WebSiteFactory {
+
+    //集合，充当池的作用
+    private HashMap<String, ConcreteWebSite> pool = new HashMap<>();
+
+    //根据网站类型返回网站，如果没有就创建一个放入池中并返回。
+    public WebSite getWebSiteCategory(String type){
+        if (!pool.containsKey(type)){
+            pool.put(type,new ConcreteWebSite(type));
+        }
+
+        return (WebSite)pool.get(type);
+    }
+
+    public WebSiteFactory() {
+    }
+}
+```
+
+#### ④使用
+
+```java
+public class Client {
+
+    public static void main(String[] args) {
+        WebSiteFactory webSiteFactory = new WebSiteFactory();
+
+        webSiteFactory.getWebSiteCategory("微信").use();
+
+        webSiteFactory.getWebSiteCategory("博客").use();
+
+        webSiteFactory.getWebSiteCategory("网站").use();
+
+        webSiteFactory.getWebSiteCategory("博客").use();
+    }
+
+}
+
+
+/**
+输出：
+
+ website type : 微信 ===>1078694789
+ website type : 博客 ===>363771819
+ website type : 网站 ===>2065951873
+ website type : 博客 ===>363771819
+
+*/
+```
+
+
+
+## 十三、代理模式
+
+### 零、介绍
+
+设计模式中的代理模式（Proxy Pattern）是一种结构型设计模式，它提供了一个对象的替代品或代理，这个代理控制着对实际对象（也称为“被代理对象”或“委托对象”）的访问。在软件设计中，代理模式的主要目的是为原对象增加间接层，通过这一层可以附加额外的功能或者进行预处理、后处理操作，同时保持与原始对象接口的一致性。
+
+代理模式的典型应用场景包括但不限于以下几个方面：
+
+1. **远程代理**：当对象存在于不同地址空间时，例如网络上的另一台计算机上，本地代理对象负责将请求编码并发送到远程主机，再将远程响应解码返回给客户端。
+
+2. **虚拟代理**：在资源占用较大或者初始化时间较长的对象实例化之前，代理对象可以先创建一个轻量级对象，延迟加载实际对象，直到真正需要时才去创建和初始化。
+
+3. **保护代理**：用于控制对目标对象的访问，比如权限验证、事务管理等，在调用目标方法前检查调用者的权限或启动事务，在方法执行完成后提交或回滚事务。
+
+4. **智能引用**：代理对象可以添加额外的操作，如缓存、日志记录、性能统计等。每当客户端请求目标对象的方法时，代理对象会首先检查这些附加行为，然后决定是否以及如何转发请求至实际对象。
+
+5. **防火墙代理**：在网络编程中，代理对象可以作为一个中介来过滤、监控或者重新定义由外部系统对内部系统的请求。
+
+Java 中实现代理模式通常有两种方式：
+
+- **静态代理**：代理类在编译期间就已经确定，代理类和委托类都实现了相同的接口或继承自同一父类，代理类在编译期就完成了对委托类方法的增强。
+
+- **动态代理**：
+  - **JDK 动态代理**：**基于Java反射机制**，在运行时动态生成代理类的字节码文件，并创建代理对象。代理类实现InvocationHandler接口，并通过Proxy.newProxyInstance()方法创建代理对象。
+  - **CGLIB代理**：采用ASM字节码库，在运行时对指定类生成子类的方式实现代理，如果**目标类没有实现接口**，则可以使用CGLIB来生成动态代理。
+
+无论是哪种形式的代理，其核心思想都是为了在不修改原有业务逻辑的情况下，对对象的行为进行扩展和控制。
+
+
+
+### 一、静态代理
+
+```java
+public interface ITeacherDao {
+    void teach();
+}
+```
+
+```java
+/**
+ * 目标对象
+ */
+public class TeacherDao implements ITeacherDao{
+    @Override
+    public void teach() {
+        System.out.println("老师授课中");
+    }
+}
+```
+
+```java
+/**
+ * 代理对象
+ */
+public class TeacherDaoProxy implements ITeacherDao{
+
+    //目标对象，聚合关系
+    private ITeacherDao target;
+
+    public TeacherDaoProxy(ITeacherDao target) {
+        this.target = target;
+    }
+
+    @Override
+    public void teach() {
+        System.out.println("开始代理：");
+        target.teach();
+        System.out.println("代理介绍。");
+    }
+}
+```
+
+```java
+/**
+ * 客户端使用
+ */
+public class Client {
+    public static void main(String[] args) {
+        //目标对象（被代理对象）
+        TeacherDao teacherDao = new TeacherDao();
+        //创建代理对象
+        TeacherDaoProxy teacherDaoProxy = new TeacherDaoProxy(teacherDao);
+        //代理对象执行方法
+        teacherDaoProxy.teach();
+    }
+}
+```
+
+
+
+### 二、动态代理
+
+```java
+public interface ITeacherDao {
+
+    void teach();
+
+    void say();
+
+}
+```
+
+```java
+/**
+ * 目标对象
+ */
+public class TeacherDao implements ITeacherDao {
+    @Override
+    public void teach() {
+        System.out.println("老师授课中");
+    }
+
+    @Override
+    public void say() {
+        System.out.println("say方法");
+    }
+}
+```
+
+```java
+/**
+ * 动态代理工厂
+ */
+public class ProxyFactory {
+
+    private Object target;
+
+    public ProxyFactory(Object target) {
+        this.target = target;
+    }
+
+    public Object getProxyInstance(){
+        return Proxy.newProxyInstance(target.getClass().getClassLoader(),
+                target.getClass().getInterfaces(),
+                new InvocationHandler() {
+                    @Override
+                    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+                        System.out.println("JDK 代理开始");
+                        Object ret = method.invoke(target, args);
+                        System.out.println("代理结束~");
+                        return ret;
+                    }
+                });
+    }
+}
+```
+
+```java
+/**
+ * 客户端使用
+ */
+public class Client {
+
+    public static void main(String[] args) {
+        ITeacherDao teacherDao = new TeacherDao();
+
+        ProxyFactory proxyFactory = new ProxyFactory(teacherDao);
+
+        ITeacherDao proxyInstance = (ITeacherDao)proxyFactory.getProxyInstance();
+
+        proxyInstance.teach();
+        proxyInstance.say();
+    }
+
+}
+```
+
+
+
+### 三、Cglib代理
+
+目标对象不用实现接口
+
+```java
+/**
+ * 目标对象
+ */
+public class TeacherDao{
+
+    public void teach() {
+        System.out.println("老师授课中");
+    }
+
+    public void say() {
+        System.out.println("say方法");
+    }
+}
+```
+
+
+
+```java
+/**
+ * 代理对象工厂
+ */
+public class ProxyFactory implements MethodInterceptor {
+    //目标对象
+    private Object target;
+
+    public ProxyFactory(Object target) {
+        this.target = target;
+    }
+
+    public Object getProxyInstance(){
+        //1.创建一个工具类
+        Enhancer enhancer = new Enhancer();
+        //2.设置父类
+        enhancer.setSuperclass(target.getClass());
+        //3.设置回调函数
+        enhancer.setCallback(this);
+        //4.创建子类对象，即代理对象
+        return enhancer.create();
+    }
+
+    @Override
+    public Object intercept(Object obj, Method method, Object[] args, MethodProxy proxy) throws Throwable {
+        System.out.println("准备执行方法：");
+        long start = System.currentTimeMillis();
+
+        try {
+            // 执行目标方法
+            Object result = proxy.invokeSuper(obj, args);
+
+            long executionTime = System.currentTimeMillis() - start;
+            System.out.println("执行结束：" + method.getName() + " executed in " + executionTime + "ms");
+
+            return result;
+        } catch (Exception e) {
+            throw e;
+        }
+    }
+}
+```
+
+
+
+```java
+public class Client {
+
+    public static void main(String[] args) {
+        ProxyFactory proxyFactory = new ProxyFactory(new TeacherDao());
+        TeacherDao proxyInstance = (TeacherDao)proxyFactory.getProxyInstance();
+
+        proxyInstance.teach();
+
+        proxyInstance.say();
+    }
+
+}
+
+/**
+输出：
+
+准备执行方法：
+老师授课中
+执行结束：teach executed in 14ms
+准备执行方法：
+say方法
+执行结束：say executed in 0ms
+
+*/
+```
+
+
+
+
+
+## 十四、模板模式
+
+### 零、介绍
+
+设计模式中的模板模式（Template Pattern）是一种行为设计模式，它定义了一个算法的骨架，并允许子类在不改变结构的情况下重写或填充算法的某些步骤。这种模式主要用于代码复用，将通用的处理流程与具体的实现细节相分离。
+
+**模板模式的主要组成部分：**
+
+1. **抽象模板（Abstract Template Class）**：
+   这是一个抽象类，它**声明了执行算法所需的方法框架**，包括一个或多个基本方法和一个模板方法。模板方法是一个具体的方法，该方法定义了算法的骨架，其中调用了基本方法。基本方法可以是抽象的，由子类负责实现；也可以是具体实现的，供所有子类共享。
+
+2. **具体模板（Concrete Template Classes）**：
+   这些是抽象模板类的子类，它们实现了抽象的基本方法以完成算法中可变的部分。尽管每个子类可以根据需要提供不同的实现，但算法的整体结构由抽象模板类控制。
+
+**工作原理：**
+- 在抽象模板类中，模板方法通常会按照特定顺序调用一些基本操作方法。
+- 基本方法可以是抽象方法（Java中的`abstract`方法），要求子类必须提供实现；也可以是钩子方法（Hook Method），即有默认实现但仍允许子类覆盖的方法。
+- 子类通过继承抽象模板类并实现那些抽象方法来个性化算法的各个步骤。
+
+**应用场景：**
+- 当多个类具有相同或相似的算法流程，但部分步骤有所不同时，模板模式能很好地封装不变部分，同时让可变部分易于扩展。
+- 编译器编译过程、数据库连接与关闭操作（打开连接 -> 执行SQL -> 处理结果 -> 关闭连接）、游戏框架中的角色更新逻辑等都是模板模式的典型应用场景。
+
+通过模板模式，我们可以确保算法的结构一致性，同时又赋予子类足够的灵活性去定制关键的处理环节。
+
+
+
+### 一、代码示例
+
+```java
+/**
+ * 抽象模板
+ */
+public abstract class SoyBeanMilk {
+
+    //模板方法
+    final void make(){
+        select();
+        if (addOther()){
+            add();
+        }
+        soak();
+        beat();
+    }
+
+    //选材
+    void select(){
+        System.out.println("选择好黄豆");
+    }
+
+    //添加不同材料
+    abstract void add();
+
+    //浸泡
+    void soak(){
+        System.out.println("浸泡材料");
+    }
+
+    //打碎材料
+    void beat(){
+        System.out.println("打碎材料");
+    }
+
+    //钩子方法，有些功能可能不用实现add方法
+    boolean addOther(){
+        return true;
+    }
+}
+```
+
+```java
+/**
+ * 具体模板1
+ */
+public class RedBeanSoya extends SoyBeanMilk{
+    @Override
+    void add() {
+        System.out.println("加入红豆");
+    }
+}
+
+/**
+ * 具体模板2
+ */
+public class PeanutSoya extends SoyBeanMilk{
+    @Override
+    void add() {
+        System.out.println("加入花生");
+    }
+}
+
+/**
+ * 具体模板3
+ */
+public class PureSoya extends SoyBeanMilk{
+    @Override
+    void add() {
+
+    }
+
+  	//重写钩子方法
+    @Override
+    boolean addOther() {
+        return false;
+    }
+}
+```
+
+```java
+public class Client {
+
+    public static void main(String[] args) {
+        System.out.println("制作红豆豆浆：");
+        RedBeanSoya redBeanSoya = new RedBeanSoya();
+        redBeanSoya.make();
+        System.out.println("制作花生豆浆：");
+        PeanutSoya peanutSoya = new PeanutSoya();
+        peanutSoya.make();
+        System.out.println("制作纯豆浆：");
+        PureSoya pureSoya = new PureSoya();
+        pureSoya.make();
+    }
+
+}
+
+/**
+输出：
+
+制作红豆豆浆：
+选择好黄豆
+加入红豆
+浸泡材料
+打碎材料
+制作花生豆浆：
+选择好黄豆
+加入花生
+浸泡材料
+打碎材料
+制作纯豆浆：
+选择好黄豆
+浸泡材料
+打碎材料
+
+进程已结束,退出代码0
+
+
+*/
+```
+
+
+
+## 十五、命令模式
+
+### 零、介绍
+
+设计模式中的命令模式（Command Pattern）是一种行为型设计模式，它主要用于将请求封装为一个对象，使得请求可以被发送、排队、记录日志、撤销等。这种模式的核心在于通过解耦请求的发起者与接收者来降低系统的耦合度，提高模块之间的松耦合性，并且方便系统扩展和维护。
+
+在命令模式中，主要包含以下四个角色：
+
+1. **抽象命令类（Command）**：
+   - 定义了执行命令的接口，通常会声明一个或多个方法，如`execute()`，用于执行命令操作。
+   - 该接口允许不同的具体命令实现同一接口，从而确保调用者可以通过统一的方式调用不同类型的命令。
+
+2. **具体命令类（Concrete Command）**：
+   - 实现了抽象命令类的接口，包含了执行命令所需的具体操作逻辑。
+   - 具体命令类通常会持有接收者对象的引用，并在执行命令时调用接收者的特定方法来完成实际工作。
+
+3. **接收者（Receiver）**：
+   - 接收并执行具体命令的对象，负责执行相应的业务操作。
+   - 任何对象都可以成为接收者，只要它可以响应命令所对应的操作。
+
+4. **调用者/请求者（Invoker）**：
+   - 负责调用命令对象执行请求的方法的角色。
+   - 请求者不直接与接收者交互，而是通过命令对象间接触发请求，这样可以对客户端隐藏接收者的具体实现细节。
+
+使用命令模式的优势包括：
+- **解耦**：通过引入命令对象，降低了请求者与接收者之间的耦合度，它们之间通过命令对象进行交互。
+- **可扩展性**：容易添加新的命令类型，因为每种新命令只需要创建一个新的具体命令类即可。
+- **灵活性**：可以对命令进行组合、排队、记录日志、支持事务处理（比如撤销/重做），甚至可以在运行时动态地决定要执行哪个命令。
+- **职责清晰**：每个类都有明确的责任，命令对象负责封装操作，接收者负责执行操作，请求者则专注于传递请求而不关心如何处理请求。
+
+
+
+### 一、代码
+
+#### ①抽象命令类（Command）
+
+```java
+/**
+ * 抽象命令类（Command）
+ */
+public interface Command {
+    //执行
+    void execute();
+
+    //撤销
+    void undo();
+}
+```
+
+
+
+#### ②具体命令类（Concrete Command）
+
+```java
+/**
+ * 具体命令类（Concrete Command）
+ */
+public class LightOnCommand implements Command{
+
+    //聚合LightReceiver
+    LightReceiver lightReceiver;
+
+    public LightOnCommand(LightReceiver lightReceiver) {
+        this.lightReceiver = lightReceiver;
+    }
+
+    @Override
+    public void execute() {
+        lightReceiver.on();
+    }
+
+    @Override
+    public void undo() {
+        lightReceiver.off();
+    }
+}
+
+/**
+ * 具体命令类（Concrete Command）
+ */
+public class LightOffCommand implements Command{
+
+    //聚合LightReceiver
+    LightReceiver lightReceiver;
+
+    public LightOffCommand(LightReceiver lightReceiver) {
+        this.lightReceiver = lightReceiver;
+    }
+
+    @Override
+    public void execute() {
+        lightReceiver.off();
+    }
+
+    @Override
+    public void undo() {
+        lightReceiver.on();
+    }
+
+}
+
+
+/**
+ * 具体命令类（Concrete Command）
+ * 空执行方法，用于初始化每个按钮
+ * 当调用空命令时，什么都不做
+ * 可以省掉空判断
+ */
+public class NoCommand implements Command{
+    @Override
+    public void execute() {}
+
+    @Override
+    public void undo() {}
+}
+```
+
+
+
+#### ③接收者（Receiver）
+
+```java
+/**
+ * 接收者（Receiver）
+ */
+public class LightReceiver {
+
+    public void on(){
+        System.out.println("电灯打开");
+    }
+
+    public void off(){
+        System.out.println("电灯关闭");
+    }
+
+}
+```
+
+
+
+#### ④调用者/请求者（Invoker）
+
+```java
+/**
+ * 调用者/请求者（Invoker）
+ */
+public class RemoteController {
+    //开-按钮
+    Command[] onCommands;
+    //关-按钮
+    Command[] offCommands;
+    //撤销-按钮
+    Command undoCommand;
+
+    //构造器初始化
+    public RemoteController() {
+        onCommands = new Command[5];
+        offCommands = new Command[5];
+
+        for (int i = 0; i < 5; i++){
+            //初始化为空实现方法
+            onCommands[i] = new NoCommand();
+            offCommands[i] = new NoCommand();
+        }
+    }
+
+    //设置对应按钮的命令
+    public void setCommand(int num, Command onCommand, Command offCommand){
+        onCommands[num] = onCommand;
+        offCommands[num] = offCommand;
+    }
+
+    //点击on按钮
+    public void onButton(int num){
+        //找到对应的按钮，执行方法
+        onCommands[num].execute();
+        //记录这次的操作，用于撤销
+        undoCommand = onCommands[num];
+    }
+
+    //点击off按钮
+    public void offButton(int num){
+        //找到对应的按钮，执行方法
+        offCommands[num].execute();
+        //记录这次的操作，用于撤销
+        undoCommand = offCommands[num];
+    }
+
+    //按下撤销
+    public void undoButton(){
+        undoCommand.undo();
+    }
+}
+```
+
+
+
+#### ⑤使用
+
+```java
+public class Client {
+    public static void main(String[] args) {
+        //创建灯
+        LightReceiver lightReceiver = new LightReceiver();
+        //创建开关命令
+        LightOnCommand lightOnCommand = new LightOnCommand(lightReceiver);
+        LightOffCommand lightOffCommand = new LightOffCommand(lightReceiver);
+        //创建遥控器
+        RemoteController remoteController = new RemoteController();
+        //设置按钮对应命令
+        remoteController.setCommand(0,lightOnCommand, lightOffCommand);
+        //按下按钮
+        remoteController.onButton(0);
+        remoteController.offButton(0);
+        remoteController.undoButton();
+    }
+}
+```
+
+
+
+##  十六、访问者模式
+
+### 零、介绍
+
+设计模式中的访问者模式（Visitor Pattern）是一种主要用于处理数据结构中多个具有不同接口的对象结构（如组合结构或元素集合）的行为型设计模式。访问者模式的核心目标是在不改变现有类层次结构的基础上，为这些对象结构添加新的操作或者计算逻辑。
+
+访问者模式包含以下几个关键组成部分：
+
+1. **抽象访问者（Visitor）**：这是一个接口或抽象类，它声明了对每一个元素类的操作访问方法。每种元素类型的`visit()`方法对应一种操作。
+
+2. **具体访问者（ConcreteVisitor）**：实现了抽象访问者的各个`visit()`方法，为每个元素类提供了具体的访问操作实现。
+
+3. **元素接口（Element）**：定义了一个接受访问者（`accept()`）的方法，这是所有元素类都要实现的接口。
+
+4. **具体元素（ConcreteElement）**：实现了元素接口，它们可以接受访问者对象的访问，并调用自己的`accept()`方法，执行访问者对象在其上的操作。
+
+5. **对象结构（ObjectStructure）**：能够存储元素对象的集合，可以遍历并调用它们的`accept()`方法，让访问者访问每一个元素。
+
+访问者模式的工作流程大致如下：
+- 定义一个表示操作的访问者接口，该接口声明了一组针对元素对象的操作方法。
+- 创建具体的访问者类，实现这些操作方法，用于对元素对象进行特定的处理。
+- 元素接口声明一个接受访问者的方法。
+- 具体元素类实现接受访问者的方法，当被访问时会调用访问者的相应操作方法。
+- 对象结构维护元素集合，并提供一个机制供访问者遍历并访问这些元素。
+
+访问者模式的优势在于：
+- 将数据结构与算法分离，增强了系统的开放封闭原则（Open/Closed Principle），即对扩展开放，对修改封闭。
+- 方便在不修改原有类的基础上添加新的操作。
+- 可以集中处理相似的元素，有利于实现一对多的关系。
+
+然而，访问者模式也有其局限性，例如增加了系统的复杂性，且不是所有系统都适合引入访问者模式，尤其是当元素结构稳定，且不需要经常添加新的操作时，使用简单的回调或其他设计模式可能更为简洁有效。
+
+
+
+### 一、代码
+
+完成一个男女生投票的需求
+
+#### ①抽象访问者（Visitor）
+
+```java
+/**
+ * 抽象访问者
+ */
+public abstract class Action {
+    //得到男生的结果
+    public abstract void getManResult(Man man);
+
+    //得到女生的结果
+    public abstract void getWomanResult(Woman woman);
+}
+```
+
+#### ②具体访问者（ConcreteVisitor）
+
+```java
+//具体访问者1
+public class Success extends Action{
+    @Override
+    public void getManResult(Man man) {
+        System.out.println("男生的评价是：success");
+    }
+
+    @Override
+    public void getWomanResult(Woman woman) {
+        System.out.println("女生的评价是：success");
+    }
+}
+//具体访问者2
+public class Fail extends Action{
+    @Override
+    public void getManResult(Man man) {
+        System.out.println("男生的评价是：Fail");
+    }
+
+    @Override
+    public void getWomanResult(Woman woman) {
+        System.out.println("女生的评价是：Fail");
+    }
+}
+//具体访问者3
+public class Wait extends Action{
+    @Override
+    public void getManResult(Man man) {
+        System.out.println("男生的评价是：wait");
+    }
+
+    @Override
+    public void getWomanResult(Woman woman) {
+        System.out.println("女生的评价是：wait");
+    }
+}
+```
+
+#### ③元素接口（Element）
+
+```java
+public abstract class Person {
+  
+    public abstract void accept(Action action);
+}
+```
+
+#### ④具体元素（ConcreteElement）
+
+```java
+public class Man extends Person{
+    @Override
+    public void accept(Action action) {
+        action.getManResult(this);
+    }
+}
+
+public class Woman  extends Person{
+    @Override
+    public void accept(Action action) {
+        action.getWomanResult(this);
+    }
+}
+```
+
+#### ⑤对象结构（ObjectStructure）
+
+```java
+public class ObjectStructure {
+
+    private List<Person> personList = new LinkedList<>();
+
+    public void attach(Person p){
+        personList.add(p);
+    }
+
+    public void detach(Person p){
+        personList.remove(p);
+    }
+
+    //显示测评情况
+    public void display(Action action){
+        for (Person person : personList) {
+            person.accept(action);
+        }
+    }
+}
+```
+
+#### ⑥使用
+
+```java
+public class Client {
+
+    public static void main(String[] args) {
+        ObjectStructure objectStructure = new ObjectStructure();
+        objectStructure.attach(new Man());
+        objectStructure.attach(new Woman());
+
+        objectStructure.display(new Success());
+        objectStructure.display(new Fail());
+        objectStructure.display(new Wait());
+    }
+}
+
+
+/**
+输出：
+
+男生的评价是：success
+女生的评价是：success
+男生的评价是：Fail
+女生的评价是：Fail
+男生的评价是：wait
+女生的评价是：wait
+
+*/
+```
+
