--- a/数据结构题目/回溯算法.md
+++ b/数据结构题目/回溯算法.md
@@ -1765,7 +1765,7 @@ class Solution {
 
 
 
-### 我的代码
+### 答案代码
 
 ```java
 class Solution {
@@ -1835,6 +1835,75 @@ class Solution {
 ```
 
 
+
+### 二刷
+
+```java
+class Solution {
+    public void solveSudoku(char[][] board) {
+        backtracking(board);
+    }
+
+    public boolean backtracking(char[][] board){
+        for(int i = 0; i < 9; i++){
+            for(int j = 0; j < 9; j++){
+                if(board[j][i] != '.'){
+                    //已经有数字
+                    continue;
+                }
+
+                for(char k = '1'; k <= '9'; k++){
+                    if(put(board, i, j, k)){
+                        //可以放
+                        board[j][i] = k;
+                        if(backtracking(board)){
+                            //找到匹配的马上返回
+                            return true;
+                        }
+                        //如果没有匹配的就会恢复成‘.’
+                        board[j][i] = '.';
+                    }
+                }
+                return false;
+            }
+        }
+
+        return true;
+    }
+
+    //判断坐标能否放num数字
+    public boolean put(char[][] board, int x, int y, char num){
+        //横
+        for(int i = 0; i < 9; i++){
+            if(board[y][i] == num){
+                return false;
+            }
+        }
+
+        //竖
+        for(int i = 0; i < 9; i++){
+            if(board[i][x] == num){
+                return false;
+            }
+        }
+
+        //小格子
+        //算算是在哪个小格子
+        //0，1，2；  3，4，5；   6，7，8
+        int xIndex = (x / 3) * 3;
+        int yIndex = (y / 3) * 3;
+        for(int i = xIndex; i < xIndex + 3; i++){
+            for(int j = yIndex; j < yIndex + 3; j++){
+                if(board[j][i] == num){
+                    return false;
+                }
+            }
+        }
+
+        return true;
+    }
+}
+```
 
 
 
