--- a/数据结构题目/贪心算法.md
+++ b/数据结构题目/贪心算法.md
@@ -58,6 +58,39 @@ class Solution {
 
 
 
+### 二刷
+
+```java
+class Solution {
+    public int findContentChildren(int[] g, int[] s) {
+        Arrays.sort(g);
+        Arrays.sort(s);
+
+        return tanxin(g,s);
+    }
+
+    public int tanxin(int[] g, int[] s){
+        int res = 0;
+        int index = 0;
+        
+        //遍历小孩
+        for(int i = 0; i < g.length; i++){
+            //遍历饼干
+            while(index < s.length){
+                if(s[index++] >= g[i]){
+                    res++;
+                    break;
+                }
+            }
+        }
+
+        return res;
+    }
+}
+```
+
+
+
 
 
 ### 答案代码
