--- a/其他/设计模式.md
+++ b/其他/设计模式.md
@@ -2745,3 +2745,363 @@ public class Client {
 */
 ```
 
+
+
+## 十七、迭代器模式
+
+### 零、介绍
+
+迭代器模式是一种在软件开发中广泛使用的**行为型设计模式**，它的核心目标是为不同类型的聚合数据结构（如列表、集合、数组、树等）提供一种统一且抽象的访问接口，允许外部代码以一致的方式遍历这些结构中的元素，而无需关心其内部的具体实现细节或复杂度。
+
+以下是迭代器模式的主要特点、组成、工作原理、适用场景、优缺点以及代码示例：
+
+特点与组成
+
+1. **迭代器接口（Iterator）**：
+   - 定义了访问和遍历聚合数据的基本操作，如`next()`（获取下一个元素）、`hasNext()`（判断是否还有下一个元素）和`remove()`（可选，移除当前元素）等方法。
+
+2. **具体迭代器（Concrete Iterator）**：
+   - 实现迭代器接口，负责跟踪当前遍历位置、管理迭代状态，并通过与具体聚合数据结构的交互来实现上述接口方法。
+
+3. **聚合接口（Aggregate）**：
+   - 定义创建相应迭代器对象的工厂方法，如`createIterator()`，它返回一个与该聚合类型相匹配的迭代器实例。
+
+4. **具体聚合（Concrete Aggregate）**：
+   - 实现聚合接口，包含元素集合及其实现，并提供必要的支持以供其对应的迭代器正确遍历这些元素。
+
+工作原理
+
+1. **客户端代码**通过调用聚合对象的`createIterator()`方法获取一个迭代器实例。
+2. 使用迭代器提供的`next()`方法按顺序访问每个元素，同时借助`hasNext()`检查是否有更多元素可供访问。
+3. 如果需要，可以使用迭代器的`remove()`方法在遍历过程中安全地移除当前元素。
+
+适用场景
+
+- 当需要对不同类型或不同实现的聚合数据结构进行统一遍历时。
+- 当希望隐藏聚合数据结构的具体实现，尤其是当这些结构复杂且可能发生变化时。
+- 当需要支持多种遍历方式（如正序、逆序、深度优先、广度优先等）时，可以为每种遍历方式提供相应的迭代器。
+
+优点
+
+- **封装性**：迭代器封装了遍历集合元素的细节，使客户端代码与具体的集合实现解耦。
+- **一致性**：为不同类型的集合提供了统一的访问接口，简化了客户端代码的编写和维护。
+- **灵活性**：新增或修改聚合数据结构的内部表示不影响已有的遍历逻辑，增强了系统的扩展性。
+- **迭代多态**：通过单一的迭代器接口，可以支持对同一集合的不同遍历方式。
+
+缺点
+
+- **额外的类和接口**：引入迭代器模式会增加系统中类的数量，增加一定的复杂性。
+- **无法直接访问特定索引**：对于需要随机访问或直接按索引访问元素的场景，迭代器模式可能不如直接使用索引来得高效。
+- **迭代器实现复杂度**：对于某些复杂的聚合结构（如树、图等），迭代器的实现可能较为复杂。
+
+
+
+### 一、代码
+
+#### ①迭代器接口（Iterator）
+
+使用jdk中的Iterator接口
+
+```java
+public interface Iterator<E> {
+
+    boolean hasNext();
+
+    E next();
+
+    default void remove() {
+        throw new UnsupportedOperationException("remove");
+    }
+
+    default void forEachRemaining(Consumer<? super E> action) {
+        Objects.requireNonNull(action);
+        while (hasNext())
+            action.accept(next());
+    }
+}
+```
+
+
+
+#### ②具体迭代器（Concrete Iterator）
+
+```java
+//具体迭代器1
+public class ComputerCollegeIterator implements Iterator {
+
+    Department[] departments;
+    int position = 0;
+
+    public ComputerCollegeIterator(Department[] departments) {
+        this.departments = departments;
+    }
+
+    @Override
+    public boolean hasNext() {
+        if (position >= departments.length || departments[position] == null){
+            return false;
+        }else {
+            return true;
+        }
+    }
+
+    @Override
+    public Object next() {
+        return departments[position++];
+    }
+
+    @Override
+    public void remove() {
+        Iterator.super.remove();
+    }
+}
+
+//具体迭代器2
+public class InfoCollegeIterator implements Iterator {
+
+    List<Department> departments;
+    int position = -1;
+
+    public InfoCollegeIterator(List<Department> departments) {
+        this.departments = departments;
+    }
+
+    @Override
+    public boolean hasNext() {
+        if (position >= departments.size() - 1){
+            return false;
+        }else {
+            position++;
+            return true;
+        }
+    }
+
+    @Override
+    public Object next() {
+        return departments.get(position);
+    }
+}
+```
+
+
+
+#### ③聚合接口（Aggregate）
+
+```java
+public interface College {
+
+    String getName();
+
+    void addDepartment(String name, String desc);
+
+    Iterator createIterator();
+
+}
+```
+
+
+
+#### ④具体聚合（Concrete Aggregate）
+
+```java
+/**
+ * 数组格式
+ */
+public class ComputerCollege implements College{
+
+    Department[] departments;
+
+    public ComputerCollege() {
+        departments = new Department[5];
+        departments[0] = new Department("java", "java11");
+        departments[1] = new Department("php", "php22");
+        departments[2] = new Department("cpp", "cpp33");
+    }
+
+    @Override
+    public String getName() {
+        return "计算机学院";
+    }
+
+    @Override
+    public void addDepartment(String name, String desc) {
+        if (departments.length >= 5){
+            System.out.println("数组已满");
+        }else {
+            departments[departments.length] = new Department(name, desc);
+        }
+    }
+
+    @Override
+    public Iterator createIterator() {
+        return new ComputerCollegeIterator(departments);
+    }
+}
+
+/**
+ * 集合格式
+ */
+public class InfoCollege implements College{
+
+    List<Department> departments;
+
+    public InfoCollege() {
+        departments = new LinkedList<>();
+        departments.add(new Department("信息工程","信工"));
+        departments.add(new Department("通信工程","通信"));
+    }
+
+    @Override
+    public String getName() {
+        return "信息工程学院";
+    }
+
+    @Override
+    public void addDepartment(String name, String desc) {
+        departments.add(new Department(name, desc));
+    }
+
+    @Override
+    public Iterator createIterator() {
+        return new InfoCollegeIterator(departments);
+    }
+}
+```
+
+
+
+#### ⑤使用
+
+```java
+//遍历对象
+public class Department {
+
+    private String name;
+    private String desc;
+
+    public Department(String name, String desc) {
+        this.name = name;
+        this.desc = desc;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getDesc() {
+        return desc;
+    }
+
+    public void setDesc(String desc) {
+        this.desc = desc;
+    }
+}
+
+
+//输出工具类
+public class OutputImpl {
+
+    //学院集合
+    List<College> colleges;
+
+    public OutputImpl(List<College> colleges) {
+        this.colleges = colleges;
+    }
+
+    //打印学院信息
+    public void printCollege(){
+        Iterator<College> iterator = colleges.iterator();
+        while (iterator.hasNext()){
+            College college = iterator.next();
+            System.out.println("=======" + college.getName() + "======");
+            printDepartment(college.createIterator());
+        }
+    }
+
+    //打印专业信息
+    public void printDepartment(Iterator iterator){
+        while (iterator.hasNext()){
+            Department department = (Department) iterator.next();
+            System.out.println(department.getName() + "---" + department.getDesc());
+        }
+    }
+}
+
+
+//客户端
+public class Client {
+
+    public static void main(String[] args) {
+        ArrayList<College> colleges = new ArrayList<>();
+
+        ComputerCollege computerCollege = new ComputerCollege();
+        InfoCollege infoCollege = new InfoCollege();
+        colleges.add(computerCollege);
+        colleges.add(infoCollege);
+
+        OutputImpl output = new OutputImpl(colleges);
+
+        output.printCollege();
+    }
+
+}
+
+
+/**
+输出：
+=======计算机学院======
+java---java11
+php---php22
+cpp---cpp33
+=======信息工程学院======
+信息工程---信工
+通信工程---通信
+*/
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
