--- a/数据结构题目/贪心算法.md
+++ b/数据结构题目/贪心算法.md
@@ -178,6 +178,55 @@ class Solution {
      为了避免这种情况造成错误，需要在前面出现坡度的时候才将curdiff赋值给prediff
 
 
+### 二刷
+
+```java
+class Solution {
+    public int wiggleMaxLength(int[] nums) {
+        if(nums.length == 1){
+            return 1;
+        }
+
+        int res = 1;
+        //上一个差值是否大于零
+        boolean btzero = false;
+        //差值数组
+        int[] diffArr = new int[nums.length - 1];
+        
+        for(int i = 1; i < nums.length; i++){
+            diffArr[i - 1] = nums[i] - nums[i-1];
+        }
+        //找到第一个差值不为0的数
+        int index = 0;
+        while(index < diffArr.length && diffArr[index] == 0){
+            index++;
+        }
+        //更新btzero和res
+        if (index < diffArr.length){
+            if(diffArr[index] > 0){
+                btzero = true;
+            }
+            res = 2;
+        }
+
+        //核心逻辑
+        for(int i = index; i < diffArr.length; i++){
+            if(!btzero && diffArr[i] > 0){
+                res++;
+                btzero = true;
+            }else if(btzero && diffArr[i] < 0){
+                res++;
+                btzero = false;
+            }
+        }
+
+        return res;
+    }
+}
+```
+
+
+
 
 
 
