--- a/其他/设计模式.md
+++ b/其他/设计模式.md
@@ -3065,9 +3065,193 @@ cpp---cpp33
 
 
 
+## 十八、观察者模式
+
+### 零、介绍
+
+设计模式中的观察者模式（Observer Pattern）是一种行为型设计模式，它旨在定义一种一对多的依赖关系，使得当一个对象（称为**主体**或**被观察者**）的状态发生改变时，所有依赖于它的对象（称为**观察者**）都能得到通知并自动更新自己的状态。这种模式通过解耦观察者与被观察者，允许两者独立地改变和扩展，提高了系统的灵活性和可维护性。
+
+以下是观察者模式的核心组成部分、工作原理、实现方式以及其应用场景和优缺点的详细介绍：
+
+### 组成部分
+
+1. **抽象被观察者（Subject）**：
+   - 提供一个接口用于添加、删除观察者对象。
+   - 定义一个方法（如 `notifyObservers()`）用于通知所有已注册的观察者，通常传递状态变化的相关信息。
+
+2. **具体被观察者（ConcreteSubject）**：
+   - 继承或实现抽象被观察者接口。
+   - 负责存储观察者对象的列表。
+   - 在内部状态改变时触发通知方法，调用所有观察者的更新方法。
+
+3. **抽象观察者（Observer）**：
+   - 定义一个更新接口，通常是一个方法（如 `update()`），该方法接收被观察者传递的状态信息作为参数。
+
+4. **具体观察者（ConcreteObserver）**：
+   - 实现抽象观察者的更新接口，定义如何响应被观察者状态的变化。
+   - 持有对被观察者的引用，以便在接收到通知时访问其状态。
+
+### 工作原理
+
+1. **注册观察者**：具体被观察者通过其提供的接口允许观察者对象注册自己，将其添加到观察者列表中。
+
+2. **状态改变**：当具体被观察者的内部状态发生改变时，它调用`notifyObservers()`方法。
+
+3. **通知观察者**：`notifyObservers()`遍历观察者列表，调用每个观察者的`update()`方法，传递状态变化的相关数据。
+
+4. **更新观察者**：每个具体观察者在其`update()`方法中根据接收到的信息更新自身的状态，实现对被观察者状态变化的响应。
+
+### 实现方式
+
+在很多编程语言中，如Java，已经提供了内置的观察者模式支持。例如，Java的`java.util.Observable`类作为被观察者基类，`java.util.Observer`接口作为观察者的规范。开发者可以直接继承和实现这些类与接口来快速实现观察者模式。
+
+### 应用场景
+
+- **用户界面（UI）更新**：如数据模型变化时自动更新视图，如MVC（Model-View-Controller）架构中的模型与视图之间的交互。
+- **事件驱动系统**：如发布/订阅系统，组件间通过事件通知机制进行通信。
+- **实时数据同步**：如股票价格变动时，多个客户端同时接收到最新报价。
+- **日志记录、报警系统**：当特定条件满足时，触发日志记录或发送警报给多个订阅者。
+- **跨模块通信**：在模块化开发中，一个模块的状态变化可以透明地通知其他依赖模块。
+
+### 优缺点
+
+**优点**：
+
+- **松耦合**：观察者和被观察者之间通过接口而非具体类相联系，降低了它们之间的耦合度。
+- **灵活性**：增加、删除观察者或者改变观察者的行为对被观察者无影响，反之亦然，增强了系统的可扩展性和可维护性。
+- **动态联动**：易于实现实时响应和联动更新，一个对象状态变化能自动传播到所有依赖对象。
+
+**缺点**：
+
+- **开销**：如果观察者数量庞大或者通知频繁，可能会导致性能下降，尤其是在需要大量同步更新的场景。
+- **循环依赖**：不恰当的设计可能导致观察者和被观察者之间形成循环依赖，增加系统的复杂性。
+- **过期订阅**：如果没有及时移除不再需要的观察者，可能导致不必要的通知和资源浪费。
+
+总的来说，观察者模式通过分离关注点，使得一个对象的变化可以自动地传播给所有依赖于它的对象，适用于需要多个对象对单一对象状态变化作出响应的场景，特别是在需要弱化对象间耦合关系和增强系统可扩展性的设计中。然而，实际应用时需要注意权衡其带来的复杂性和潜在性能开销。
 
 
 
+### 一、代码
+
+#### ①抽象被观察者（Subject）
+
+```java
+public interface Observer {
+
+    void update(float temperature, float pressure, float humidity);
+
+}
+```
+
+
+
+#### ②具体被观察者（ConcreteSubject）
+
+```java
+public class WeatherData implements Subject{
+
+    private float temperature;
+    private float pressure;
+    private float humidity;
+    private List<Observer> observers;
+
+    public void setData(float temperature, float pressure, float humidity){
+        this.temperature = temperature;
+        this.pressure = pressure;
+        this.humidity = humidity;
+        notifyObserver();
+    }
+
+    public WeatherData() {
+        observers = new ArrayList<>();
+    }
+
+    @Override
+    public void registerObserver(Observer o) {
+        observers.add(o);
+    }
+
+    @Override
+    public void removeObserver(Observer o) {
+        observers.remove(o);
+    }
+
+    @Override
+    public void notifyObserver() {
+        for (int i = 0; i < observers.size(); i++) {
+            observers.get(i).update(this.temperature,this.pressure,this.humidity);
+        }
+    }
+}
+```
+
+
+
+#### ③抽象观察者（Observer）
+
+```java
+public interface Observer {
+
+    void update(float temperature, float pressure, float humidity);
+
+}
+```
+
+
+
+
+
+#### ④具体观察者（ConcreteObserver）
+
+```java
+public class CurrentConditions implements Observer{
+
+    private float temperature;
+    private float pressure;
+    private float humidity;
+
+    public void update(float temperature, float pressure, float humidity){
+        this.temperature = temperature;
+        this.humidity = humidity;
+        this.pressure = pressure;
+        display();
+    }
+
+    public void display(){
+        System.out.println("temperature =====> " + temperature);
+        System.out.println("pressure =====> " + pressure);
+        System.out.println("humidity =====> " + humidity);
+    }
+
+}
+```
+
+
+
+#### ⑤使用
+
+```java
+public class Client {
+
+    public static void main(String[] args) {
+        WeatherData weatherData = new WeatherData();
+
+        CurrentConditions currentConditions = new CurrentConditions();
+
+        weatherData.registerObserver(currentConditions);
+
+        weatherData.setData(20,100,30);
+    }
+
+}
+
+/**
+输出：
+temperature =====> 20.0
+pressure =====> 100.0
+humidity =====> 30.0
+*/
+```
 
 
 
