--- a/数据结构题目/贪心算法.md
+++ b/数据结构题目/贪心算法.md
@@ -278,6 +278,35 @@ class Solution {
 
   ![](https://code-thinking.cdn.bcebos.com/gifs/53.%E6%9C%80%E5%A4%A7%E5%AD%90%E5%BA%8F%E5%92%8C.gif)
 
+
+
+### 二刷
+
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        int res = Integer.MIN_VALUE;
+        int cur = 0;
+
+        for(int i = 0; i < nums.length; i++){
+            cur += nums[i];
+            res = Math.max(cur, res);
+
+            //如果已经小于0，那么就重置，因为相对于后面是减值的。
+            if(cur < 0){
+                cur = 0;
+            }
+        }
+
+        return res;
+    }
+}
+```
+
+
+
+
+
 ### 代码
 
 ```java
